Added embeds to MessageCrafter, this required enabling preview features